# Hazen

./: .gitmodules  CMakeLists.txt  DarcyF.csv  HGL.csv  HGL.xlsx  PassageLinkTest.csv  README.md  doxyfile.dox  output_table.csv  output_table_1.csv  output_table_2.csv  output_table_3.csv
inc/: FrictionMethods.hpp  HeadLoss.hpp  HydraulicComponents.hpp  HydraulicLinks.hpp  HydraulicNetwork.hpp  HydraulicShapes.hpp  HydraulicUtil.hpp  Units.hpp
inc/Hazen/: Core.hpp  FrictionMethods.hpp  HeadLoss.hpp  HydraulicComponents.hpp  HydraulicLinks.hpp  HydraulicNetwork.hpp  HydraulicShapes.hpp  Hydraulics.hpp  Math.hpp
src/: FrictionMethods.cpp  HeadLoss.cpp  HydraulicComponents.cpp  HydraulicLinks.cpp  HydraulicNetwork.cpp  HydraulicShapes.cpp  HydraulicUtil.cpp
src/Hazen/: FrictionMethods.cpp  HeadLoss.cpp  HydraulicComponents.cpp  HydraulicLinks.cpp  HydraulicNetwork.cpp  HydraulicShapes.cpp  Hydraulics.cpp
src/tests/: channel_series_test.cpp  hydraulic_util_test.cpp  root_finding.cpp  vectors_example.cpp
